Fix PHP 8.4 property hooks example not being full width when wrapped (#1522)

--- a/styles/php8.css
+++ b/styles/php8.css
@@ -305,6 +305,10 @@
   margin: 0 !important;
 }
 
+.align-start {
+    align-items: start;
+}
+
 @media (max-width: 768px) {
   .php8-code {
     padding-left: 12px !important;
